# superapp-rust

./: .dockerignore  .env.example  .env.production  .gitignore  .vercelignore  CLOUD_SUPABASE_INTEGRATION_SUMMARY.md  Cargo.toml  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SUCCESS.md  Dockerfile  FRONTEND_IMPLEMENTATION_COMPLETE.md  GEMINI.md  QWEN.md  README.md  SUPABASE_CLOUD_INTEGRATION_SUMMARY.md  VERCEL_DEPLOYMENT_FIX_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  vercel.json
.github/workflows/: ci.yml
config/: default.toml
crates/app-ai/: Cargo.toml
crates/app-ai/src/: lib.rs  moderation.rs  recommendation.rs  routing.rs
crates/app-api/: Cargo.toml
crates/app-api/src/: error.rs  main.rs
crates/app-api/src/handlers/: auth.rs  dao.rs  health.rs  mobility.rs  mod.rs  social.rs
crates/app-api/src/middleware/: mod.rs
crates/app-api/src/routes/: mod.rs
crates/app-auth/: Cargo.toml
crates/app-auth/src/: jwt.rs  lib.rs  password.rs  service.rs  supabase.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: lib.rs
crates/app-core/src/domain/: mod.rs
crates/app-core/src/domain/entities/: message.rs  mod.rs  post.rs  proposal.rs  ride.rs  token_transaction.rs  user.rs
crates/app-core/src/domain/events/: mod.rs
crates/app-core/src/domain/value_objects/: mod.rs
crates/app-core/src/use_cases/: ai_recommendations.rs  create_proposal.rs  grant_tokens.rs  mod.rs  user_repository.rs
crates/app-dao/: Anchor.toml
crates/app-dao/programs/superapp-dao/: Cargo.toml
crates/app-dao/programs/superapp-dao/src/: lib.rs
crates/app-messaging/: Cargo.toml
crates/app-messaging/src/: lib.rs  service.rs
crates/app-mobility/: Cargo.toml
crates/app-mobility/src/: lib.rs  service.rs
crates/app-payments/: Cargo.toml
crates/app-payments/src/: lib.rs  service.rs
crates/app-social/: Cargo.toml
crates/app-social/src/: lib.rs  service.rs
crates/app-storage/: Cargo.toml
crates/app-storage/migrations/: 001_initial_schema.sql
crates/app-storage/src/: lib.rs  postgres.rs  redis_cache.rs
crates/app-storage/src/repositories/: post_repository.rs  user_repository.rs
docs/: CLOUD_SUPABASE_INTEGRATION_GUIDE.md  CLOUD_SUPABASE_SETUP.md  DEPLOYMENT.md  DEV_SERVER_GUIDE.md  FLYIO_DEPLOYMENT.md  FRONTEND_DEPLOYMENT_GUIDE.md  INSTALL_DEPENDENCIES.md  PROJECT_STATUS.md  QUICK_START.md  SETUP_GUIDE.md  SUPABASE_INTEGRATION.md  SUPABASE_LOCAL_SETUP.md  VERCEL_DEPLOYMENT_CHECKLIST.md  VERCEL_DEPLOYMENT_FIX.md
frontend/: .env.local.example  .env.production  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/webpack/edge-server-production/: 0.pack  index.pack
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/app/: _not-found.rsc  index.html  index.rsc  login.html  login.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js  register.html  register.rsc
frontend/.next/server/app/_not-found/: page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/app/login/: page.js  page.js.nft.json  page_client-reference-manifest.js
frontend/.next/server/app/register/: page.js  page_client-reference-manifest.js
frontend/.next/server/chunks/: 192.js  231.js  468.js
frontend/.next/server/pages/: 404.html  500.html
frontend/.next/server/src/: middleware.js  middleware.js.map
frontend/.next/static/chunks/: 202-b11c958d8356c64f.js  236-e5172dddc4417c46.js  838-f2e16f92c368263d.js  ee560e2c-b437064daea91898.js  main-92e5c8834161c35f.js  main-app-5e11ef2aa9338e8a.js
frontend/.next/static/chunks/app/: layout-2cbef699c93569a6.js  page-b1a88e23214602c4.js
frontend/.next/static/chunks/app/login/: page-e97274eaf13671ae.js
frontend/.next/static/chunks/app/register/: page-3ca006d7cfe09667.js
frontend/.next/static/css/: a0ed280838bc8804.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/.next/types/app/login/: page.ts
frontend/.next/types/app/register/: page.ts
frontend/public/: test.html
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/social/: page.tsx
frontend/src/components/: Navbar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/services/: api.ts
scripts/: connect-cloud-supabase.sh  deploy-flyio.sh  diagnose-vercel-deployment.sh  fix-vercel-deployment.sh  migrate-supabase.sh  setup-cloud-supabase.sh  setup.sh
supabase/: config.toml
