[workspace]
resolver = "2"
members = [
    "crates/app-core",
    "crates/app-api",
    "crates/app-ai",
    "crates/app-social",
    "crates/app-mobility",
    "crates/app-payments",
    "crates/app-messaging",
    "crates/app-auth",
    "crates/app-storage",
]

# Note: app-dao is a separate Anchor workspace at crates/app-dao/

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["SuperApp Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"

# Web Framework
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Security & Crypto
ring = "0.17"
argon2 = "0.5"
jsonwebtoken = "9.2"
rand = "0.8"
rustls = { version = "0.22", features = ["ring"] }

# Blockchain
solana-sdk = "1.17"
solana-client = "1.17"
anchor-lang = "0.29"
anchor-spl = "0.29"

# AI/ML
tract-onnx = "0.21"
ndarray = "0.15"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
config = "0.14"

# Testing
mockall = "0.12"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
