[package]
name = "app-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "app-api"
path = "src/main.rs"

[dependencies]
app-core = { path = "../app-core" }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }

jsonwebtoken = { workspace = true }
argon2 = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
