[package]
name = "app-auth"
version.workspace = true
edition.workspace = true

[dependencies]
app-core = { path = "../app-core" }

tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
