[package]
name = "app-social"
version.workspace = true
edition.workspace = true

[dependencies]
app-core = { path = "../app-core" }
app-storage = { path = "../app-storage" }

tokio = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
