[package]
name = "app-storage"
version.workspace = true
edition.workspace = true

[[bin]]
name = "test-db"
path = "src/bin/test_db.rs"

[dependencies]
app-core = { path = "../app-core" }

tokio = { workspace = true }
sqlx = { workspace = true, features = ["uuid", "chrono", "json"] }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
